--- a/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
@@ -313,7 +313,6 @@
            <!-- Trang chủ -->
 <section id="home" class="active">
     <h1>Chào mừng bạn đến với ShopGold TNV</h1>
-    <p>Chuyên cung cấp các sản phẩm trang sức vàng cao cấp.</p>
 
     <div class="slider">
         <div class="slides">
@@ -322,6 +321,12 @@
             <img src="https://theme.hstatic.net/200000567741/1001359727/14/slide_4.jpg?v=194" alt="Slide 3">
         </div>
     </div>
+    </div>
+       <div class="below-images">
+        <img src="https://theme.hstatic.net/200000567741/1001359727/14/index_banner_1_grande.jpg?v=194" alt="Ảnh phụ 1">
+        <img src="https://theme.hstatic.net/200000567741/1001359727/14/index_banner_2_grande.jpg?v=194" alt="Ảnh phụ 2">
+    </div>
+    
 </section>
 
 
