--- a/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
@@ -205,7 +205,7 @@
         }
 
         th {
-            background: linear-gradient(90deg, #D7A61E, #E7C277);
+            background: linear-gradient(90deg, #f8ebc7, #E7C277);
             color: #1a1a1a;
             text-transform: uppercase;
             border-radius: 8px 8px 0 0;
@@ -217,7 +217,7 @@
 
         /* Buttons */
         .btn {
-            background: #D7A61E;
+            background: #e7d29b;
             border: none;
             color: white;
             padding: 7px 15px;
@@ -229,7 +229,7 @@
         }
 
         .btn:hover {
-            background: #b89813;
+            background: #eede9d;
         }
 
         .btn-delete {
