--- a/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
@@ -71,7 +71,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(180deg, #4983df, #6c8abb);
+    background: linear-gradient(180deg, #dcdf1b, #cacf6a);
     color: white;
     padding: 10px 30px;
     height: 60px;
@@ -205,8 +205,8 @@
         }
 
         th {
-            background: linear-gradient(90deg, #19c9a0, #7fc43f);
-            color: #d2226b;
+            background: linear-gradient(90deg, #bed52a, #dde163);
+            color: #f6f6f6;
             text-transform: uppercase;
             border-radius: 8px 8px 0 0;
         }
@@ -469,10 +469,7 @@
             { id: "SP006", name: "Dây Chuyền Bạc", price: 3000000, image: "https://cdn.pnj.io/images/detailed/147/SD0000W060088-Day-chuyen-Bac-PNJSilver-1.png" },
             { id: "SP007", name: "Nhẫn Bạc", price: 2500000, image: "https://cdn.pnj.io/images/detailed/135/snxmxmw060086-nhan-bac-dinh-da-cz-pnjsilver-1.png" },
             { id: "SP008", name: "Lắc Bạc", price: 2800000, image: "https://cdn.pnj.io/images/detailed/41/slnikk14456.000-lac-tay-bac-pnjsilver-dinh-da_0.png" },
-            { id: "SP009", name: "Dây Chuyền Bạc 925", price: 3500000, image: "https://cdn.pnj.io/images/detailed/82/sd0000w060010-day-chuyen-bac-y-pnjsilver.png" },
-            { id: "SP010", name: "Nhẫn Vàng Chạm Khắc", price: 3600000, image: "https://lienquan.garena.vn/wp-content/uploads/2024/05/22878b0202ea24b883044a9c642d5536583eb618cf2971.png"},
-            { id: "SP011", name: "Vàng Khối Điêu Khắc Phong Thủy", price: 18000000, image: "https://lienquan.garena.vn/wp-content/uploads/2024/05/Remove-bg.ai_1718860200380.png"},
-            { id: "SP012", name: "Vòng Kiềng", price: 38000000, image: "https://cdn.pnj.io/images/detailed/125/gh0000y060118-kieng-vang-24k-pnj.png" }
+            { id: "SP009", name: "Dây Chuyền Bạc 925", price: 3500000, image: "https://cdn.pnj.io/images/detailed/82/sd0000w060010-day-chuyen-bac-y-pnjsilver.png" }   
         ];
 
         let customers = [];
