--- a/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
@@ -205,7 +205,7 @@
         }
 
         th {
-            background: linear-gradient(90deg, #bed52a, #dde163);
+            background: linear-gradient(90deg, #e2e513, #d7da80);
             color: #f6f6f6;
             text-transform: uppercase;
             border-radius: 8px 8px 0 0;
