--- a/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
@@ -468,8 +468,7 @@
             { id: "SP005", name: "Vòng Cổ Vàng", price: 12000000, image: "https://apj.vn/wp-content/uploads/2019/06/DC0004.5.jpg" },
             { id: "SP006", name: "Dây Chuyền Bạc", price: 3000000, image: "https://cdn.pnj.io/images/detailed/147/SD0000W060088-Day-chuyen-Bac-PNJSilver-1.png" },
             { id: "SP007", name: "Nhẫn Bạc", price: 2500000, image: "https://cdn.pnj.io/images/detailed/135/snxmxmw060086-nhan-bac-dinh-da-cz-pnjsilver-1.png" },
-            { id: "SP008", name: "Lắc Bạc", price: 2800000, image: "https://cdn.pnj.io/images/detailed/41/slnikk14456.000-lac-tay-bac-pnjsilver-dinh-da_0.png" },
-            { id: "SP009", name: "Dây Chuyền Bạc 925", price: 3500000, image: "https://cdn.pnj.io/images/detailed/82/sd0000w060010-day-chuyen-bac-y-pnjsilver.png" }   
+            { id: "SP008", name: "Lắc Bạc", price: 2800000, image: "https://cdn.pnj.io/images/detailed/41/slnikk14456.000-lac-tay-bac-pnjsilver-dinh-da_0.png" }   
         ];
 
         let customers = [];
