--- a/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
@@ -71,8 +71,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(180deg, #dcdf1b, #cacf6a);
-    color: white;
+    background: linear-gradient(180deg, #ff7801e1, #f5e104);
+    color: rgb(251, 251, 251);
     padding: 10px 30px;
     height: 60px;
       position: fixed;
@@ -103,7 +103,7 @@
 
 .navbar .menu li:hover,
 .navbar .menu li.active {
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(245, 244, 243, 0.345);
 }
 
 /* Loại bỏ sidebar cũ */
@@ -128,7 +128,7 @@
     margin-bottom: 10px;
     overflow: hidden;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 10px rgba(3, 3, 3, 0.686);
     object-fit: cover;
 }
 
@@ -174,7 +174,7 @@
         /* Main content */
         .main-content {
             flex-grow: 1;
-            background: white;
+            background: #fbfbf9fd;
             padding: 20px 30px;
             overflow-y: auto;
         }
@@ -205,8 +205,8 @@
         }
 
         th {
-            background: linear-gradient(90deg, #e2e513, #d7da80);
-            color: #f6f6f6;
+            background: linear-gradient(90deg, #fbff05d4, #f59904);
+            color: #f9f9f9;
             text-transform: uppercase;
             border-radius: 8px 8px 0 0;
         }
@@ -217,7 +217,7 @@
 
         /* Buttons */
         .btn {
-            background: #e7d29b;
+            background: #ebeb8b;
             border: none;
             color: rgba(20, 20, 20, 0.964);
             padding: 7px 15px;
@@ -229,11 +229,11 @@
         }
 
         .btn:hover {
-            background: #eede9d;
+            background: #e6be00;
         }
 
         .btn-delete {
-            background: #e74c3c;
+            background: hsla(4, 92%, 45%, 0.926);
         }
 
         .btn-delete:hover {
@@ -241,13 +241,13 @@
         }
 
         .btn-add {
-            background: #1fdcdc;
+            background: #d4af37;
             float: right;
             margin-bottom: 10px;
         }
 
         .btn-add:hover {
-            background: #1fc5cb;
+            background: #b8860b;
         }
 
         /* Form inputs */
@@ -306,7 +306,7 @@
         }
 
         .btn-print:hover {
-            background: #2980b9;
+            background: #2e86b1;
         }
 
 
