--- a/VY_TRUONG_NAM/CuaHangVang/complete/bin/main/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/bin/main/templates/goldshop.html
@@ -471,7 +471,7 @@ function loadState() {
     products: [
        { id: "SP001", name: "Nhẫn Vàng 24K", price: 80000000.00, image: "https://cdn.pnj.io/images/detailed/113/gn0000y001737-nhan-vang-24k-pnj-1.png" },
     { id: "SP002", name: "Dây Chuyền Vàng", price:950000000.00, image: "https://cdn.pnj.io/images/detailed/100/gd0000y007840-day-chuyen-vang-24k-pnj-1.png" },
-    { id: "SP003", name: "Vòng Kiềng", price: 400000000.00, image: "https://locphuc.com.vn/Content/Images/San-pham-lan-21/Bong-tai-nu-vang-18K-VEA0860E-LP03200014-g1.jpg" },
+    { id: "SP003", name: "Vòng Kiềng", price: 400000000.00, image: "https://cdn.pnj.io/images/detailed/215/sp-gh0000y060000-kieng-cuoi-vang-24k-pnj-1.png" },
     { id: "SP004", name: "Lắc Tay Vàng", price: 120000000.00, image: "https://cdn.pnj.io/images/detailed/116/gl0000y001844-lac-tay-vang-18k-pnj-1.png" }
     ],
     customers: [], cart: [], transactions: []
